# pdf-engine-toolbox

./: .env.example  .gitignore  Dockerfile  LICENSE  docker-compose.yml  pyproject.toml  requirements.txt  test_local.py
.claude/: settings.local.json
app/: config.py  dependencies.py  main.py
app/auth/: hmac_auth.py
app/models/: requests.py  responses.py
app/routes/: annotations.py  build.py  classify.py  convert.py  health.py  images.py  info.py  metadata.py  pages.py  redact.py  repair.py  security.py  tasks.py  text.py  thumbnails.py  transform.py
app/services/: cache_service.py  download_service.py  pdf_service.py  task_service.py
app/utils/: errors.py
scripts/: download_models.py
tests/: conftest.py  test_annotations.py  test_build.py  test_cache.py  test_classify.py  test_convert.py  test_convert_office.py  test_crop_watermark.py  test_detect_blank.py  test_health.py  test_images.py  test_info.py  test_metadata.py  test_ocr.py  test_pages.py  test_redact.py  test_repair.py  test_security.py  test_tables.py  test_tasks.py  test_tax_year.py  test_text.py  test_thumbnails_webp.py  test_transform.py  test_watermark_dynamic.py
