[project]
name = "pdf-engine-toolbox"
version = "1.0.0"
description = "PyMuPDF-based PDF processing microservice"
license = "AGPL-3.0-or-later"
requires-python = ">=3.12"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
